syntax = "proto3";

package blog;

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message Post {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    repeated string tags = 6;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author = 3;
    string publication_date = 4;
    repeated string tags = 5;
}

message CreatePostResponse {
    Post post = 1;
    string error_message = 2;
}

message ReadPostRequest {
    string post_id = 1;
}

message ReadPostResponse {
    Post post = 1;
    string error_message = 2;
}

message UpdatePostRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    repeated string tags = 5;
}

message UpdatePostResponse {
    Post post = 1;
    string error_message = 2;
}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {
    bool success = 1;
    string error_message = 2;
}
